{
    "name": "CameraInputActions",
    "maps": [
        {
            "name": "CameraControls",
            "id": "d02cb783-5845-4654-9d51-aab6bd8fdcfe",
            "actions": [
                {
                    "name": "Pan",
                    "type": "PassThrough",
                    "id": "ef5a00f2-6d1f-47d3-9ece-cb034634ba1f",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "FastPan",
                    "type": "Button",
                    "id": "73e6177e-b763-4393-a768-0b5b9743c4fd",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "465ee1da-6b05-4e52-88f6-8a3835e9f3ba",
                    "expectedControlType": "Axis",
                    "processors": "Invert",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Reset",
                    "type": "Button",
                    "id": "72d9a041-5f08-463f-abc3-8480fce2d871",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Rotate",
                    "type": "Value",
                    "id": "6a557eee-e5f5-4c53-a43d-5414995156b1",
                    "expectedControlType": "Delta",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "abafc5a4-68ae-41b1-af26-ac96009e7699",
                    "path": "<Mouse>/scroll/y",
                    "interactions": "",
                    "processors": "Clamp(min=-10,max=10)",
                    "groups": "",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "2D Vector",
                    "id": "5e51d2a2-85c4-450f-bcb0-114c7f71786e",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "c9102520-da20-4570-b0df-a5a3fcd7a11d",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "65f5c40e-9d90-4716-a6d2-420cd1025227",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "af8dbe57-f8a1-4d2e-953d-3dc3c80d869a",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "85bf751b-579b-44b8-8d0a-de448487a0c7",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Pan",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "1156fa12-86a7-40e8-b170-bfda62220552",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Reset",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "38abe179-46c4-4c8a-9589-62f07520213c",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "FastPan",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "X",
                    "id": "ee7235ae-1744-4fb1-9828-054bfbddaa42",
                    "path": "OneModifier",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "modifier",
                    "id": "59e5b12e-d91f-4171-8409-f8ad5486e8d6",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "binding",
                    "id": "d2edd126-c7e6-409c-b280-008c1ba9f259",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "Clamp(min=-10,max=10)",
                    "groups": "",
                    "action": "Rotate",
                    "isComposite": false,
                    "isPartOfComposite": true
                }
            ]
        }
    ],
    "controlSchemes": []
}